docs/0.17/_sources/api/gammapy.irf.Background2D.rst.txt
Background2D
============

.. currentmodule:: gammapy.irf

.. autoclass:: Background2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Background2D.default_interp_kwargs

   .. rubric:: Methods Summary

   .. autosummary::

      ~Background2D.evaluate
      ~Background2D.evaluate_integrate
      ~Background2D.from_hdulist
      ~Background2D.from_table
      ~Background2D.peek
      ~Background2D.plot
      ~Background2D.plot_energy_dependence
      ~Background2D.plot_offset_dependence
      ~Background2D.plot_spectrum
      ~Background2D.read
      ~Background2D.to_3d
      ~Background2D.to_fits
      ~Background2D.to_table

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_interp_kwargs

   .. rubric:: Methods Documentation

   .. automethod:: evaluate
   .. automethod:: evaluate_integrate
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_energy_dependence
   .. automethod:: plot_offset_dependence
   .. automethod:: plot_spectrum
   .. automethod:: read
   .. automethod:: to_3d
   .. automethod:: to_fits
   .. automethod:: to_table
